--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ form {
     background-color: #EDEDED;
     box-shadow: 0 0 15px rgba(0, 0, 0, .25);
     margin: 0 auto;
+    text-align: center;
 }
 form p {
     font-size: 18px;
@@ -36,10 +37,9 @@ form p {
     text-align: center;
 }
 .user-info input {
-    display: block;
+    
     width: 368px;
     height: 63px;
-    margin-left: 100px;
     padding-left: 30px;
     border: 1px solid rgba(0, 0, 0, .1);
     margin-top: 20px;
@@ -50,7 +50,6 @@ input::placeholder {
     font-size: 16px;
 }
 button {
-    display: block;
     background-color: #72D9D4;
     color: #ffffff;
     text-transform: uppercase;
@@ -62,13 +61,11 @@ button {
     margin: 25px auto;
 }
 .remember {
-    margin-left: 110px;
+    text-align: left;
+    margin-left: 100px;
 }
 .remember input {
     width: 18px;
     height: 18px;
     border: 1px solid rgba(0, 0, 0, .1);
-}
-.remember label {
-    display: inline-block;
 }
